# SDL2_Lazy_Foo

./: .gitignore  CMakeLists.txt  MySdlFunctions.hpp  README.md
01_Hello_SDL/: CMakeLists.txt  main.cpp
02_Getting_an_Image_on_the_Screen/: CMakeLists.txt  main.cpp
03_Event_Driven_Programming/: CMakeLists.txt  main.cpp
04_Key_Presses/: CMakeLists.txt  main.cpp
05_Optimized_Surface_Loading_and_Soft_Stretching/: CMakeLists.txt  main.cpp
06_Extension_Libraries_and_Loading_Other_Image_Formats/: CMakeLists.txt  main.cpp
07_Texture_Loading_and_Rendering/: CMakeLists.txt  main.cpp
08_Geometry_Rendering/: CMakeLists.txt  main.cpp
09_The_Viewport/: CMakeLists.txt  main.cpp
10_Color_Keying/: CMakeLists.txt  main.cpp
11_Clip_Rendering_and_Sprite_Sheets/: CMakeLists.txt  main.cpp
12_Color_Modulation/: CMakeLists.txt  main.cpp
13_Alpha_Blending/: CMakeLists.txt  main.cpp
13_Alpha_Blending/sdl2/: CMakeLists.txt
14_Animated_Sprites_and_Vsync/: CMakeLists.txt  main.cpp
15_Rotation_and_Flipping/: CMakeLists.txt  main.cpp
16_True_Type_Fonts/: CMakeLists.txt  main.cpp
17_Mouse_Events/: CMakeLists.txt  main.cpp
18_Key_States/: CMakeLists.txt  main.cpp
19_Gamepads_and_Joysticks/: CMakeLists.txt  main.cpp
20_Force_Feedback/: CMakeLists.txt  main.cpp
21_Sound_Effects_and_Music/: CMakeLists.txt  main.cpp
22_Timing/: CMakeLists.txt  main.cpp
2_Getting_an_Image_on_the_Screen/: CMakeLists.txt  main.cpp
3_Event_Driven_Programming/: CMakeLists.txt  MySdlFunctions.hpp  main.cpp
4_Key_Presses/: CMakeLists.txt  MySdlFunctions.hpp  main.cpp
5_Optimized_Surface_Loading_and_Soft_Stretching/: CMakeLists.txt  MySdlFunctions.hpp  main.cpp
6_Extension_Libraries_and_Loading_Other_Image_Formats/: MySdlFunctions.hpp  main.cpp
7_Texture_Loading_and_Rendering/: CMakeLists.txt  MySdlFunctions.hpp  main.cpp
8_Geometry_Rendering/: CMakeLists.txt
9_The_Viewport/: CMakeLists.txt  main.cpp
WrapperClasses/: CMakeLists.txt  LButton.cpp  LButton.hpp  LTexture.cpp  LTexture.hpp
WrapperClasses/Dot/: CMakeLists.txt  dot.cpp  dot.hpp
WrapperClasses/LButton/: CMakeLists.txt  LButton.cpp  LButton.hpp
WrapperClasses/LTexture/: CMakeLists.txt  LTexture.hpp
WrapperClasses/LTimer/: CMakeLists.txt  LTimer.cpp  LTimer.hpp
libs/: CMakeLists.txt
libs/Utilities/: CMakeLists.txt  MySdlFunctions.hpp
libs/sdl2/: CMakeLists.txt
tutorials/: CMakeLists.txt
tutorials/01_Hello_SDL/: CMakeLists.txt  main.cpp
tutorials/02_Getting_an_Image_on_the_Screen/: CMakeLists.txt  main.cpp
tutorials/03_Event_Driven_Programming/: CMakeLists.txt  main.cpp
tutorials/04_Key_Presses/: CMakeLists.txt  main.cpp
tutorials/05_Optimized_Surface_Loading_and_Soft_Stretching/: CMakeLists.txt  main.cpp
tutorials/06_Extension_Libraries_and_Loading_Other_Image_Formats/: CMakeLists.txt  main.cpp
tutorials/07_Texture_Loading_and_Rendering/: CMakeLists.txt  main.cpp
tutorials/08_Geometry_Rendering/: CMakeLists.txt  main.cpp
tutorials/09_The_Viewport/: CMakeLists.txt  main.cpp
tutorials/10_Color_Keying/: CMakeLists.txt  main.cpp
tutorials/11_Clip_Rendering_and_Sprite_Sheets/: CMakeLists.txt  main.cpp
tutorials/12_Color_Modulation/: CMakeLists.txt  main.cpp
tutorials/13_Alpha_Blending/: CMakeLists.txt  main.cpp
tutorials/14_Animated_Sprites_and_Vsync/: CMakeLists.txt  main.cpp
tutorials/15_Rotation_and_Flipping/: CMakeLists.txt  main.cpp
tutorials/16_True_Type_Fonts/: CMakeLists.txt  main.cpp
tutorials/17_Mouse_Events/: CMakeLists.txt  main.cpp
tutorials/18_Key_States/: CMakeLists.txt  main.cpp
tutorials/19_Gamepads_and_Joysticks/: CMakeLists.txt  main.cpp
tutorials/20_Force_Feedback/: CMakeLists.txt  main.cpp
tutorials/21_Sound_Effects_and_Music/: CMakeLists.txt  main.cpp
tutorials/22_Timing/: CMakeLists.txt  main.cpp
tutorials/23_Advanced_Timers/: CMakeLists.txt  main.cpp
tutorials/24_Calculating_Frame_Rate/: CMakeLists.txt  main.cpp
tutorials/25_Capping_Frame_Rate/: CMakeLists.txt  main.cpp
tutorials/26_Motion/: CMakeLists.txt  main.cpp
