add_subdirectory(01_Hello_SDL)
add_subdirectory(02_Getting_an_Image_on_the_Screen)
add_subdirectory(03_Event_Driven_Programming)
add_subdirectory(04_Key_Presses)
add_subdirectory(05_Optimized_Surface_Loading_and_Soft_Stretching)
add_subdirectory(06_Extension_Libraries_and_Loading_Other_Image_Formats)
add_subdirectory(07_Texture_Loading_and_Rendering)
add_subdirectory(08_Geometry_Rendering)
add_subdirectory(09_The_Viewport)
add_subdirectory(10_Color_Keying)
add_subdirectory(11_Clip_Rendering_and_Sprite_Sheets)
add_subdirectory(12_Color_Modulation)
add_subdirectory(13_Alpha_Blending)
add_subdirectory(14_Animated_Sprites_and_Vsync)
add_subdirectory(15_Rotation_and_Flipping)
add_subdirectory(16_True_Type_Fonts)
add_subdirectory(17_Mouse_Events)
add_subdirectory(18_Key_States)
add_subdirectory(19_Gamepads_and_Joysticks)
add_subdirectory(20_Force_Feedback)
add_subdirectory(21_Sound_Effects_and_Music)
add_subdirectory(22_Timing)
add_subdirectory(23_Advanced_Timers)